[package]
name = "evm-prometheus-exporter"
version = "0.1.0"
edition = "2021"
description = "A Prometheus exporter for EVM chains"
license = "MIT"

[dependencies]
alloy-primitives = "0.6"
alloy-rpc-client = "0.6"
alloy-transport-http = "0.6"
metrics = "0.22"
metrics-exporter-prometheus = "0.13"
metrics-util = "0.15"
tokio = { version = "1.36", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0" 